# mise-task-defs

./: README.md
go/: .gitignore  README.md  go.mod  go.sum  mise.toml
go/cmd/cli/: main.go
go/internal/: database.go
go/internal/buildinfo/: buildinfo.go
go/sql/: sqlc.yaml
go/sql/users/: queries.sql  schema.sql  sql.go
python/: README.md  mise.toml  pyproject.toml
python/cmd/: main.py
python/src/foo/: __init__.py
