[project]
name = "foo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.0",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
